<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_grey_300"
    tools:context="my.kampretstudent.ActivityLogin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:background="@color/material_grey_300">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_nim"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/txtNIM" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_password"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/txtPwd" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_system"
                android:padding="20dp"
                android:onClick="btnLogin_Click"
                android:id="@+id/btnLogin"
                android:background="@drawable/btn_bg"
                android:layout_marginLeft="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:padding="20dp"
                android:onClick="btnExit_Click"
                android:id="@+id/button"
                android:paddingTop="40dp"
                android:background="@drawable/btn_bg"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"
            android:layout_marginTop="20dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_unit_id"
            android:layout_gravity="center_horizontal|top">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</RelativeLayout>
