<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:padding="10dp"
    android:id="@+id/nilai">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@color/main_color"
            android:paddingTop="12dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="New Text"
                android:textColor="#000"
                android:id="@+id/lstMatkul"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="4dp"
                android:gravity="center"
                android:background="#fff"
                android:typeface="sans"
                android:textIsSelectable="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:background="#fff"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sks"
                        android:id="@+id/textView12"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:typeface="sans"
                        android:textSize="12sp"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:id="@+id/lstSKS"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:typeface="sans"
                        android:textIsSelectable="false"
                        android:background="#f5f5f5"
                        android:padding="5dp"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:background="#fff"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilai"
                        android:id="@+id/textView14"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:typeface="sans"
                        android:textSize="12sp"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100_00"
                        android:id="@+id/lstAKHIR"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:typeface="sans"
                        android:textIsSelectable="false"
                        android:background="#f5f5f5"
                        android:padding="5dp"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mutu"
                        android:id="@+id/textView"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:typeface="sans"
                        android:textSize="12sp"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a"
                        android:id="@+id/lstMUTU"
                        android:layout_weight="0.50"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:typeface="sans"
                        android:textIsSelectable="false"
                        android:background="#f5f5f5"
                        android:padding="5dp"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:paddingBottom="12dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_gravity="center"
            android:paddingTop="8dp"
        android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abs"
                    android:id="@+id/textView2"
                    android:layout_gravity="top|center"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstABS"
                    android:layout_weight="0.50"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frm"
                    android:id="@+id/textView3"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstFRM"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgs"
                    android:id="@+id/textView4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstTGS"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prk"
                    android:id="@+id/textView5"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstPRK"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uts"
                    android:id="@+id/textView6"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstUTS"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas"
                    android:id="@+id/textView16"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstUAS"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:background="#fff"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sp"
                    android:id="@+id/textView7"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textSize="12sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/_100_00"
                    android:id="@+id/lstSP"
                    android:layout_weight="0.50"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textIsSelectable="false"
                    android:background="#f5f5f5"
                    android:padding="5dp"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="#fff"></FrameLayout>

</LinearLayout>